# BitTorrentClient

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp
source/download/: connection.cpp  download.cpp  download.h  farm.cpp  worker.cpp  worker.h
source/include/download/: download.h  worker.h
src/: main.cpp
src/download/: download.cpp  worker.cpp
